kube/database.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rjoke
  name: joke-api-db-deployment
  labels:
    app: joke-api-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: joke-api-db
  template:
    metadata:
      labels:
        app: joke-api-db
    spec:
      containers:
        - name: joke-api-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: postgresstorage
            mountPath: /var/lib/postgresql/data
          - name: init-script
            mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgresstorage
        persistentVolumeClaim:
          claimName: joke-api-db-pvc
      - name: init-script
        configMap:
          name: joke-api-postgres-init
---
apiVersion: v1
kind: Service
metadata:
  namespace: rjoke
  name: joke-api-db-service
spec:
  type: ClusterIP
  selector:
    app: joke-api-db
  ports:
    - port: 5432
      targetPort: 5432
