kube/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: joke-api-service
  namespace: rjoke
spec:
  selector:
    app: joke-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
