kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-joke-app-ingress
  namespace: rjoke
spec:
  rules:
  - host: api.funjokes.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: joke-api-service
            port:
              number: 8080
